--- a/cc.html
+++ b/cc.html
@@ -134,7 +134,7 @@
 	        <!--Main Nav ===================================================================-->
 	    	<nav id="main" class="constrain clearfix">
 	    		<ul>
-	    			<li class="current"><a href="index.html">Home</a></li>
+	    			<li><a href="index.html">Home</a></li>
 	    			<li><a href="members.html">Members</a></li>
 	    			<li><a href="sponsor.html">Sponsors</a></li>
 	    			<li><a href="team.html">Team</a></li>
@@ -143,7 +143,7 @@
 	    			<li><a href="history.html">History</a></li>
 	    			<li><a href="dontate.html">Donate</a></li>
 	    			<li><a href="join.html">Join</a></li>
-	    			<li><a href="cc.html">Credit Card</a></li>
+	    			<li class="current"><a href="cc.html">Credit Card</a></li>
 	    		</ul>
 	    		
 	    		<form method="get" class="searchform" action="http://dev.api.jquery.com/">
