Secondary Nav Styles no icons

--- a/cc.html
+++ b/cc.html
@@ -206,10 +206,12 @@
 		        <!--Sidebar ======================================================================-->
 		        <div id="sidebar">
 		        <h3>In This Section</h3>
-		        <ul>
-		        	<li class="current"><a href="#">jQuery Credit Card</a></li>
-		        	<li><a href="#">FAQ</a></li>
-		        </ul>
+		        <nav id="secondary">
+			        <ul>
+			        	<li class="current"><a href="#">jQuery Credit Card</a></li>
+			        	<li><a href="#">FAQ</a></li>
+			        </ul>
+		        </nav>
 		        
 		        </div>
 		        <!--End Sidebar ==================================================================-->
