Fixed link to donate.html in all navigations

--- a/meetings.html
+++ b/meetings.html
@@ -20,7 +20,7 @@
         <script type="text/javascript" src="//use.typekit.net/rib7dfk.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     </head>
-    <body id="body-jquery-foundation" class="members-page content-full full-width">
+    <body id="body-jquery-foundation" class="meetings-page content-full full-width">
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
         <![endif]-->
@@ -141,7 +141,7 @@
 	    			<li class="current"><a href="meetings.html">Meetings</a></li>
 	    			<li><a href="updates.html">Updates</a></li>
 	    			<li><a href="history.html">History</a></li>
-	    			<li><a href="dontate.html">Donate</a></li>
+	    			<li><a href="donate.html">Donate</a></li>
 	    			<li><a href="join.html">Join</a></li>
 	    			<li><a href="cc.html">Credit Card</a></li>
 	    		</ul>
