--- a/cc.html
+++ b/cc.html
@@ -141,7 +141,7 @@
 	    			<li><a href="meetings.html">Meetings</a></li>
 	    			<li><a href="updates.html">Updates</a></li>
 	    			<li><a href="history.html">History</a></li>
-	    			<li><a href="dontate.html">Donate</a></li>
+	    			<li><a href="donate.html">Donate</a></li>
 	    			<li><a href="join.html">Join</a></li>
 	    			<li class="current"><a href="cc.html">Credit Card</a></li>
 	    		</ul>
