Foundation Homepage Header and sub-header CSS

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 	        
 	        
 	         <!--Banner ===============================================================-->
-	         <div id="banner">
+	         <div id="banner-secondary" class="large-banner">
 	         	<h2>The jQuery Foundation</h2>
 	         	<img class="#" src="images-foundation/foundation-logos.png" alt="image" />
 	         	<p>Supporting the advancement of the web through Javascript</p>
