Fixed global floating sidebar, more work on Docs

--- a/docs.html
+++ b/docs.html
@@ -112,23 +112,30 @@
 		<p>You can easily customize different layouts for <code>#content</code>.</p>
 		
 		<div class="row">
-			<div class="four columns">
+			<div class="three columns">
 			<figure>
-				<img src="images/docs/layout-sidebar-right.gif" alt="Content Right" />
-				<figcaption><em>This is the default</em></figcaption>
+				<img class="full noborder" src="images/docs/layout-sidebar-right.gif" alt="Content Right" />
+				<figcaption><code>body.content-right</code></figcaption>
 			</figure>	
 			</div>
 			
-			<div class="four columns">
+			<div class="three columns">
 			<figure>
-				<img src="images/docs/layout-sidebar-center.gif" alt="Content Right" />
-				<figcaption><em>This is the default</em></figcaption>
+				<img class="full noborder" src="images/docs/layout-sidebar-none.gif" alt="Content Ful" />
+				<figcaption><code>body.content-full</code></figcaption>
 			</figure>	
 			</div>
 			
-			<div class="four columns">
+			<div class="three columns">
 			<figure>
-				<img src="images/docs/layout-sidebar-left.gif" alt="Content Right" />
+				<img class="full noborder" src="images/docs/layout-sidebar-none-full.gif" alt="Content Full" />
+				<figcaption><code>body.content-full.full-width</code></figcaption>
+			</figure>	
+			</div>
+			
+			<div class="three columns">
+			<figure>
+				<img class="full noborder" src="images/docs/layout-sidebar-left.gif" alt="Content Left" />
 				<figcaption><em>This is the default</em></figcaption>
 			</figure>	
 			</div>
