Adjusting Image & Figure/Figcaption options for no borders

--- a/docs.html
+++ b/docs.html
@@ -112,31 +112,33 @@
 		<p>You can easily customize different layouts for <code>#content</code>.</p>
 		
 		<div class="row">
-			<div class="three columns">
-			<figure>
+			<div class="four columns">
+			<figure class="full noborder">
 				<img class="full noborder" src="images/docs/layout-sidebar-right.gif" alt="Content Right" />
-				<figcaption><code>body.content-right</code></figcaption>
+				<figcaption><em>This is the default</em></figcaption>
 			</figure>	
 			</div>
 			
-			<div class="three columns">
-			<figure>
+			<div class="four columns">
+			<figure class="full noborder">
 				<img class="full noborder" src="images/docs/layout-sidebar-none.gif" alt="Content Ful" />
 				<figcaption><code>body.content-full</code></figcaption>
 			</figure>	
 			</div>
 			
-			<div class="three columns">
-			<figure>
-				<img class="full noborder" src="images/docs/layout-sidebar-none-full.gif" alt="Content Full" />
-				<figcaption><code>body.content-full.full-width</code></figcaption>
+			<div class="four columns">
+			<figure class="full noborder">
+				<img class="full noborder" src="images/docs/layout-sidebar-left.gif" alt="Content Left" />
+				<figcaption><code>body.content-right</code></figcaption>
 			</figure>	
 			</div>
-			
-			<div class="three columns">
-			<figure>
-				<img class="full noborder" src="images/docs/layout-sidebar-left.gif" alt="Content Left" />
-				<figcaption><em>This is the default</em></figcaption>
+		</div>
+		
+		<div class="row">
+			<div class="four columns centered">
+			<figure class="full noborder">
+				<img class="full noborder" src="images/docs/layout-sidebar-none-full.gif" alt="Content Full" />
+				<figcaption><code>body.content-full.full-width</code></figcaption>
 			</figure>	
 			</div>
 		</div>
