Made Homepage Full Widthand centered up sponsor logos

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <script type="text/javascript" src="//use.typekit.net/rib7dfk.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     </head>
-    <body id="body-jquery-foundation" class="content-full">
+    <body id="body-jquery-foundation" class="content-full full-width">
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
         <![endif]-->
