Donate Page Fixed

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 	    			<li><a href="meetings.html">Meetings</a></li>
 	    			<li><a href="updates.html">Updates</a></li>
 	    			<li><a href="history.html">History</a></li>
-	    			<li><a href="dontate.html">Donate</a></li>
+	    			<li><a href="donate.html">Donate</a></li>
 	    			<li><a href="join.html">Join</a></li>
 	    			<li><a href="cc.html">Credit Card</a></li>
 	    		</ul>
