--- a/styleguide.html
+++ b/styleguide.html
@@ -10,10 +10,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
-        <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/base.css">
-        <link rel="stylesheet" href="css/grid.css">
-        <link rel="stylesheet" href="css/docs.css">
+        <link rel="stylesheet" href="css/styleguide.css">
         <!--[if lt IE 7]><link rel="stylesheet" href="css/font-awesome-ie7.css"><![endif]-->
 
         <script src="js/vendor/modernizr-2.6.1.min.js"></script>
