Added Forms into Navigation, Cleaned up pre spacing

--- a/styleguide.html
+++ b/styleguide.html
@@ -47,6 +47,7 @@
 				<li><a href="#typography">Typography</a></li>
 				<li><a href="#banners">Banners</a></li>
 				<li><a href="#fonts">Fonts</a></li>
+				<li><a href="#forms">Forms</a></li>
 				<li><a href="#grid">Grid</a></li>
 			</ul>
 		</nav>
@@ -428,6 +429,8 @@
 &lt;h2&gt;&lt;i class=&quot;icon-plane&quot;&gt;&lt;/i&gt; Want to...&lt;/h2&gt;</code>
 </pre>				
 			</div>	
+			
+		<h1 id="forms">Forms</h1>	
 
 			<div class="example">
 				<h3>Forms</h3>
@@ -460,36 +463,34 @@
 					<input type="submit" value="Submit" />
 				</form>
 
-				<pre>
-					<code>
-&lt;form class=&quot;top-labels&quot;&gt;
-	&lt;label for=&quot;name&quot;&gt;
-		Name
-		&lt;input type=&quot;text&quot; placeholder=&quot;Your Name&quot; name=&quot;name&quot;/&gt;
-	&lt;/label&gt;
-	&lt;label for=&quot;website&quot;&gt;
-		Your website
-		&lt;input type=&quot;text&quot; placeholder=&quot;http://&quot; name=&quot;website&quot; /&gt;
-	&lt;/label&gt;
-	&lt;label for=&quot;message&quot;&gt;
-		Message
-		&lt;textarea name=&quot;message&quot; placeholder=&quot;Your message&quot;&gt;&lt;/textarea&gt;
-	&lt;/label&gt;
+<pre>
+<code>&lt;form class=&quot;top-labels&quot;&gt;
+&lt;label for=&quot;name&quot;&gt;
+	Name
+	&lt;input type=&quot;text&quot; placeholder=&quot;Your Name&quot; name=&quot;name&quot;/&gt;
+&lt;/label&gt;
+&lt;label for=&quot;website&quot;&gt;
+	Your website
+	&lt;input type=&quot;text&quot; placeholder=&quot;http://&quot; name=&quot;website&quot; /&gt;
+&lt;/label&gt;
+&lt;label for=&quot;message&quot;&gt;
+	Message
+	&lt;textarea name=&quot;message&quot; placeholder=&quot;Your message&quot;&gt;&lt;/textarea&gt;
+&lt;/label&gt;
 
-	&lt;fieldset class=&quot;radio&quot;&gt;
-		&lt;label for=&quot;notifications&quot;&gt;&lt;span&gt;&lt;strong&gt;Notifications&lt;/strong&gt;&lt;/span&gt;&lt;/label&gt;
-		&lt;ul&gt;
-			&lt;li&gt;&lt;label&gt;&lt;input type=&quot;radio&quot; name=&quot;notifications&quot;&gt; Send me email&lt;/label&gt;&lt;/li&gt;
-			&lt;li&gt;&lt;label&gt;&lt;input type=&quot;radio&quot; name=&quot;notifications&quot;&gt; Don&#039;t send me email&lt;/label&gt;&lt;/li&gt;
-		&lt;/ul&gt;
-	&lt;/fieldset&gt;
+&lt;fieldset class=&quot;radio&quot;&gt;
+	&lt;label for=&quot;notifications&quot;&gt;&lt;span&gt;&lt;strong&gt;Notifications&lt;/strong&gt;&lt;/span&gt;&lt;/label&gt;
+	&lt;ul&gt;
+		&lt;li&gt;&lt;label&gt;&lt;input type=&quot;radio&quot; name=&quot;notifications&quot;&gt; Send me email&lt;/label&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;label&gt;&lt;input type=&quot;radio&quot; name=&quot;notifications&quot;&gt; Don&#039;t send me email&lt;/label&gt;&lt;/li&gt;
+	&lt;/ul&gt;
+&lt;/fieldset&gt;
 
-	&lt;label for=&quot;remember&quot;&gt;&lt;input type=&quot;checkbox&quot; name=&quot;remember&quot;&gt; Remember me&lt;/label&gt;
+&lt;label for=&quot;remember&quot;&gt;&lt;input type=&quot;checkbox&quot; name=&quot;remember&quot;&gt; Remember me&lt;/label&gt;
 
-	&lt;input type=&quot;submit&quot; value=&quot;Submit&quot; /&gt;
-&lt;/form&gt;
-					</code>
-				</pre>
+&lt;input type=&quot;submit&quot; value=&quot;Submit&quot; /&gt;
+&lt;/form&gt;</code>
+</pre>
 				<hr />
 				<h4>Left aligned labels</h4>
 
@@ -521,37 +522,35 @@
 					<input type="submit" value="Submit" />
 				</form>
 
-				<pre>
-					<code>
-&lt;form class=&quot;left-labels&quot;&gt;
-	&lt;label for=&quot;name&quot;&gt;
-		&lt;span&gt;Name&lt;/span&gt;
-		&lt;input type=&quot;text&quot; placeholder=&quot;Your Name&quot; name=&quot;name&quot;/&gt;
-	&lt;/label&gt;
-	&lt;label for=&quot;website&quot;&gt;
-		&lt;span&gt;Your website&lt;/span&gt;
-		&lt;input type=&quot;text&quot; placeholder=&quot;http://&quot; name=&quot;website&quot; /&gt;
-	&lt;/label&gt;
-	&lt;label for=&quot;message&quot;&gt;
-		&lt;span&gt;Message&lt;/span&gt;
-		&lt;textarea name=&quot;message&quot; placeholder=&quot;Your message&quot;&gt;&lt;/textarea&gt;
-	&lt;/label&gt;
+<pre>
+<code>&lt;form class=&quot;left-labels&quot;&gt;
+&lt;label for=&quot;name&quot;&gt;
+	&lt;span&gt;Name&lt;/span&gt;
+	&lt;input type=&quot;text&quot; placeholder=&quot;Your Name&quot; name=&quot;name&quot;/&gt;
+&lt;/label&gt;
+&lt;label for=&quot;website&quot;&gt;
+	&lt;span&gt;Your website&lt;/span&gt;
+	&lt;input type=&quot;text&quot; placeholder=&quot;http://&quot; name=&quot;website&quot; /&gt;
+&lt;/label&gt;
+&lt;label for=&quot;message&quot;&gt;
+	&lt;span&gt;Message&lt;/span&gt;
+	&lt;textarea name=&quot;message&quot; placeholder=&quot;Your message&quot;&gt;&lt;/textarea&gt;
+&lt;/label&gt;
 
-	&lt;fieldset class=&quot;radio&quot;&gt;
-		&lt;label for=&quot;notifications&quot;&gt;&lt;span&gt;Notifications&lt;/span&gt;&lt;/label&gt;
-		&lt;ul&gt;
-			&lt;li&gt;&lt;label&gt;&lt;input type=&quot;radio&quot; name=&quot;notifications&quot;&gt; Send me email&lt;/label&gt;&lt;/li&gt;
-			&lt;li&gt;&lt;label&gt;&lt;input type=&quot;radio&quot; name=&quot;notifications&quot;&gt; Don&#039;t send me email&lt;/label&gt;&lt;/li&gt;
-		&lt;/ul&gt;
-	&lt;/fieldset&gt;
+&lt;fieldset class=&quot;radio&quot;&gt;
+	&lt;label for=&quot;notifications&quot;&gt;&lt;span&gt;Notifications&lt;/span&gt;&lt;/label&gt;
+	&lt;ul&gt;
+		&lt;li&gt;&lt;label&gt;&lt;input type=&quot;radio&quot; name=&quot;notifications&quot;&gt; Send me email&lt;/label&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;label&gt;&lt;input type=&quot;radio&quot; name=&quot;notifications&quot;&gt; Don&#039;t send me email&lt;/label&gt;&lt;/li&gt;
+	&lt;/ul&gt;
+&lt;/fieldset&gt;
 
-	&lt;label for=&quot;remember&quot;&gt;&lt;span&gt;Remember&lt;/span&gt;
-	&lt;input type=&quot;checkbox&quot; name=&quot;remember&quot;&gt; Remember me&lt;/label&gt;
+&lt;label for=&quot;remember&quot;&gt;&lt;span&gt;Remember&lt;/span&gt;
+&lt;input type=&quot;checkbox&quot; name=&quot;remember&quot;&gt; Remember me&lt;/label&gt;
 
-	&lt;input type=&quot;submit&quot; value=&quot;Submit&quot; /&gt;
-&lt;/form&gt;
-					</code>
-				</pre>
+&lt;input type=&quot;submit&quot; value=&quot;Submit&quot; /&gt;
+&lt;/form&gt;</code>
+</pre>
 
 			</div>
 			
